learn2turn/src/objects/Process_Job_Master__c.object
<CustomObject>
    <description>Contains the master definition for a particular type of restartable task.</description>
    <fields>
        <fullName>Job_Description__c</fullName>
        <description>Enter any documentation about what the job does here.</description>
        <inlineHelpText>Enter any documentation about what the job does here.</inlineHelpText>
        <label>Job Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Max_Tries__c</fullName>
        <label>Max Tries</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operator_Instructions__c</fullName>
        <description>Enter any information an operator monitoring the job would need to know such as what to check, restart instructions, escalation.</description>
        <inlineHelpText>Enter any information an operator monitoring the job would need to know such as what to check, restart instructions, escalation.</inlineHelpText>
        <label>Operator Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Processor_Class_Name__c</fullName>
        <description>The name of a class that will be instantiated to do the work for this job.  The class must implement interface ProcessJobProcessor.</description>
        <inlineHelpText>The name of a class that will be instantiated to do the work for this job.  The class must implement interface ProcessJobProcessor.</inlineHelpText>
        <label>Processor Class Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retryable_Via_Batchable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Task will await being rerun by a batchable after failed run.</description>
        <inlineHelpText>Task will await being rerun by a batchable after failed run.</inlineHelpText>
        <label>Retryable Via Batchable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retryable_Via_Queueable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Task will automatically requeue itself after failed run.</description>
        <inlineHelpText>Task will automatically requeue itself after failed run.</inlineHelpText>
        <label>Retryable Via Queueable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retryable__c</fullName>
        <formula>Retryable_Via_Batchable__c  ||  Retryable_Via_Queueable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retryable</label>
        <type>Checkbox</type>
    </fields>
    <label>Process Job Master</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Process Job Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Job Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>